fixes readonly not being taken into account in optional indicator and label align items center

--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -2,4 +2,5 @@
   padding-bottom: var(--fds-spacing-2);
   display: flex;
   gap: var(--fds-spacing-1);
+  align-items: center;
 }
